# FerroGate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  serve-docs.sh
.github/workflows/: ci.yml  release.yml
crates/cmis/: Cargo.toml
crates/cmis/src/: cluster_store.rs  credential.rs  crl_publisher.rs  fleet_manifest.rs  fleet_watcher.rs  lib.rs  main.rs  pcr.rs  rim_watcher.rs  service.rs  state.rs  transport.rs
crates/cmis/tests/: allowlist.rs  child_key_rehydration.rs  enrollment_key.rs  host_key_enrollment.rs  proposals.rs  revocation.rs  root_rotation.rs
crates/ferro-attest/: Cargo.toml  build.rs
crates/ferro-attest/src/: aik.rs  host_key.rs  lib.rs  rim.rs  rim_bundle.rs  rim_loader.rs  tpm.rs  vendor.rs  verify.rs
crates/ferro-attest/tests/: verify_quote.rs
crates/ferro-attest/vendor-roots/: README.md
crates/ferro-audit/: Cargo.toml
crates/ferro-audit/src/: anchor.rs  bytes.rs  cosign.rs  event.rs  lib.rs  log.rs  merkle.rs  sth.rs  store.rs
crates/ferro-ceremony/: Cargo.toml
crates/ferro-ceremony/src/: crosssign.rs  destruction.rs  lib.rs  media.rs  minutes.rs
crates/ferro-child-verify/: Cargo.toml
crates/ferro-child-verify/src/: lib.rs
crates/ferro-child-verify/tests/: verify.rs
crates/ferro-crypto/: Cargo.toml
crates/ferro-crypto/src/: composite.rs  lib.rs  pin.rs  tls.rs  transport.rs
crates/ferro-crypto/tests/: composite_kat.rs  composite_proptest.rs  tls_handshake.rs  wire_format.rs  wycheproof_aead.rs
crates/ferro-harden/: Cargo.toml
crates/ferro-harden/src/: lib.rs  linux.rs
crates/ferro-machineid/: Cargo.toml
crates/ferro-machineid/src/: lib.rs
crates/ferro-proto/: Cargo.toml  build.rs
crates/ferro-proto/proto/: machine_identity.proto
crates/ferro-proto/src/: lib.rs
crates/ferro-raft/: Cargo.toml
crates/ferro-raft/src/: cluster.rs  lib.rs  peer_cert.rs
crates/ferro-raft/tests/: cluster_e2e.rs
crates/ferro-sep/: Cargo.toml
crates/ferro-sep/src/: enclave.rs  lib.rs
crates/ferro-svid/: Cargo.toml
crates/ferro-svid-verify/: Cargo.toml
crates/ferro-svid-verify/src/: lib.rs
crates/ferro-svid/src/: allowlist.rs  claims.rs  crl.rs  envelope.rs  issue.rs  jwks.rs  lib.rs  lifecycle.rs  spiffe.rs
crates/ferro-svid/tests/: verify_roundtrip.rs
crates/ferro-tee/: Cargo.toml
crates/ferro-tee/src/: attest.rs  cluster.rs  error.rs  key.rs  lib.rs  measurement.rs  psk.rs  seal.rs  shamir.rs
crates/ferro-tee/tests/: threshold_e2e.rs
crates/ferro-transport/: Cargo.toml
crates/ferro-transport/src/: lib.rs
crates/ferro-winauth/: Cargo.toml
crates/ferro-winauth/src/: imp.rs  lib.rs  service.rs
crates/ferrogate-cli/: Cargo.toml
crates/ferrogate-cli/src/: allowlist.rs  main.rs
crates/ferrogate-cli/tests/: smoke.rs
crates/mia/: Cargo.toml
crates/mia/nsis/: installer.nsi
crates/mia/nuget/: ferrogate-mia.nuspec
crates/mia/nuget/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
crates/mia/src/: audit_client.rs  client.rs  config.rs  endpoint.rs  hardening.rs  lib.rs  main.rs  resync.rs  scheduler.rs  seal.rs  selftest.rs  setup.rs  tpm.rs  virtual_tpm.rs
crates/mia/src/helper/: allowlist.rs  auth.rs  crl.rs  ledger.rs  mod.rs  proto.rs  server.rs  token.rs
crates/mia/src/helper/server/: mod.rs  unix.rs  windows.rs
crates/mia/tests/: child_token_verify.rs  cluster_attest.rs  crl_pull.rs  e2e_attest.rs  helper_api.rs  host_key_attest.rs  swtpm_attest.rs  swtpm_seal.rs  tls_transport.rs
crates/mia/wix/: main.wxs  mia.wxs
docker/: f02-dev.Dockerfile  ferrogate-entrypoint.sh  ferrogate.Dockerfile  win-cross.Dockerfile
docker/cluster-test/: docker-compose.yml
docs/: README.md  _sidebar.md  allowlist-provisioning.md  architecture.md  audit.md  cmis.md  crypto.md  helper-api.md  index.html  mia.md  networking.md  operations.md  protocol.md  roadmap.md  testing.md  threat-model.md  tpm.md  transport-tls.md
docs/adr/: 0001-grpc-over-http-transport.md  0002-allowlist-optional-uid.md  0003-host-allowlist-request-status.md  README.md
docs/features/: F01-hybrid-pqc-tls.md  F02-tpm-attestation.md  F03-composite-signatures.md  F04-svid-lifecycle.md  F05-cmis-ha.md  F06-tee-threshold-keys.md  F07-audit-log.md  F08-helper-api.md  F09-dpop-child-tokens.md  F10-rim-pcr-policy.md  F11-revocation.md  F12-mia-hardening.md  F13-bootstrap-enrollment.md  F14-root-key-ceremony.md  F15-apple-attestation.md  F16-vtpm-tiered-attestation.md  README.md
docs/operations/: root-key-ceremony.md
docs/operations/drills/: mass-revocation.md  quorum-loss-recovery.md  region-loss.md
docs/operations/runbooks/: README.md  crl-stale.md  key-share-failure.md  sth-lag.md
formal/: README.md
formal/cryptoverif/: hybrid_ake.cv
formal/tamarin/: attestation.spthy
scripts/: build-msi-amd64.sh  build-rpm-amd64.sh  f02-docker.sh  ferrogate-ca.sh  ferrogate-group.sh  pack-sdk.sh  reproducible-build.sh  win-cross.sh
scripts/drills/: mass-revocation.sh  quorum-loss-recovery.sh  region-loss.sh
tools/fleet-manifest/: Cargo.toml
tools/fleet-manifest/src/: main.rs
tools/fleet-manifest/tests/: cli.rs
tools/offline-signer/: Cargo.toml
tools/offline-signer/src/: dry_run.rs  main.rs
tools/offline-signer/tests/: cli.rs
