[package]
name        = "cmis"
description = "FerroGate — Central Machine Identity Service (gRPC server)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
name = "cmis"
path = "src/lib.rs"

[[bin]]
name = "cmis"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }
ferro-attest = { path = "../ferro-attest" }
ferro-audit  = { path = "../ferro-audit" }
ferro-proto  = { path = "../ferro-proto" }
ferro-svid   = { path = "../ferro-svid" }
ferro-raft   = { path = "../ferro-raft" }
ferro-tee    = { path = "../ferro-tee" }

serde              = { workspace = true }

tokio              = { workspace = true }
tokio-stream       = { workspace = true }
tonic              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
parking_lot        = { workspace = true }
rand_core          = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
serde_json         = { workspace = true }
base64             = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
