[package]
name        = "ferro-attest"
description = "FerroGate — TPM 2.0 attestation verification (M2)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
thiserror   = { workspace = true }
sha2        = { workspace = true }
sha3        = { workspace = true }
serde       = { workspace = true }
subtle      = { workspace = true }
hex         = { workspace = true }
x509-parser = { workspace = true, features = ["verify"] }
p256        = { workspace = true }

[dev-dependencies]
rcgen     = { workspace = true }
rand_core = { workspace = true }
