[package]
name        = "ferro-attest"
description = "FerroGate — TPM 2.0 attestation verification (M2)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }

thiserror   = { workspace = true }
sha2        = { workspace = true }
sha3        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
base64      = { workspace = true }
subtle      = { workspace = true }
hex         = { workspace = true }
x509-parser = { workspace = true, features = ["verify"] }
p256        = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rcgen     = { workspace = true }
rand_core = { workspace = true }
