[package]
name        = "ferro-audit"
description = "FerroGate — Merkle-chained immutable audit log (M3)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
sha3      = { workspace = true }
serde     = { workspace = true }
ciborium  = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
