[package]
name        = "ferro-audit"
description = "FerroGate — Merkle-chained immutable audit log (M3)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }

thiserror   = { workspace = true }
sha3        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
ciborium    = { workspace = true }
parking_lot = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
