[package]
name        = "ferro-ceremony"
description = "FerroGate — air-gapped root-key ceremony primitives (F14): sealed Shamir transport media, cross-signing, signed minutes, destruction"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }
ferro-tee    = { path = "../ferro-tee" }

thiserror  = { workspace = true }
zeroize    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
hex        = { workspace = true }
sha3       = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
