[package]
name        = "ferro-child-verify"
description = "FerroGate — reference verifier for DPoP-bound composite-signed child tokens (F09)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }

thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
base64        = { workspace = true }
sha2          = { workspace = true }
ed25519-dalek = { workspace = true }
