[package]
name        = "ferro-crypto"
description = "FerroGate — hybrid post-quantum cryptographic primitives (M1)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
thiserror     = { workspace = true }
zeroize       = { workspace = true }
sha3          = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core     = { workspace = true }
ring          = { workspace = true }
serde         = { workspace = true }
