[package]
name        = "ferro-crypto"
description = "FerroGate — hybrid post-quantum cryptographic primitives (M1)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
thiserror           = { workspace = true }
zeroize             = { workspace = true }
sha2                = { workspace = true }
sha3                = { workspace = true }
subtle              = { workspace = true }
hex                 = { workspace = true }
ed25519-dalek       = { workspace = true }
rand_core           = { workspace = true }
ring                = { workspace = true }
serde               = { workspace = true }
rustls              = { workspace = true }
rustls-post-quantum = { workspace = true }
rustls-pki-types    = { workspace = true }
x509-parser         = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true }
tokio-rustls = { workspace = true }
rcgen        = { workspace = true }
aws-lc-rs    = { workspace = true }
wycheproof   = { workspace = true }
