[package]
name        = "ferro-proto"
description = "FerroGate — generated gRPC stubs and shared wire types (M2/F04)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
