[package]
name        = "ferro-raft"
description = "FerroGate — CMIS Raft replication via hiqlite (F05)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
hiqlite     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
futures            = { workspace = true }
