[package]
name        = "ferro-svid"
description = "FerroGate — JWS SVID envelope, issuance, SPIFFE derivation, and lifecycle policy (F04)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }

thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
ferro-svid-verify = { path = "../ferro-svid-verify" }
