[package]
name        = "ferro-tee"
description = "FerroGate — SEV-SNP / TDX integration and Shamir share handling (M4)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
zeroize   = { workspace = true }
serde     = { workspace = true }
