[package]
name        = "ferro-tee"
description = "FerroGate — SEV-SNP / TDX attestation and Shamir 3-of-5 threshold key shares (M4 / F06)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
thiserror   = { workspace = true }
zeroize     = { workspace = true }
serde       = { workspace = true }
serde_bytes = "0.11"
sha3        = { workspace = true }
subtle      = { workspace = true }
rand_core   = { workspace = true }
ed25519-dalek = { workspace = true }
ciborium    = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }

# Page-locked memory (the `region` crate wraps the platform mlock/VirtualLock
# syscall in a safe API — no `unsafe` at our boundary).
region              = "3"

# ML-KEM-768 for the peer share-transport PSK channel (FIPS 203).
ml-kem              = { version = "0.2", default-features = false, features = ["std"] }

# AEAD + KDF used both for sealing (measurement-bound) and PSK-channel
# transport.
chacha20poly1305    = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf                = "0.12"

[dev-dependencies]
proptest = { workspace = true }
