[package]
name        = "ferrogate-cli"
description = "FerroGate — operator CLI (placeholder, scaffolded by ironroot)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "ferrogate"
path = "src/main.rs"

# The original ironroot scaffold predates the workspace lints; relax until
# the CLI gets rewritten as the operator tool in M5/M6.
[lints.rust]
unsafe_code  = "deny"
missing_docs = "allow"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = "allow"

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
file-rotate        = { workspace = true }
