[package]
name        = "ferrogate-cli"
description = "FerroGate — operator CLI (ferrogate): inventory, status, revocation, epoch bump"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "ferrogate"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferro-proto = { path = "../ferro-proto" }

tokio  = { workspace = true }
tonic  = { workspace = true }
anyhow = { workspace = true }
