[package]
name        = "ferrogate-cli"
description = "FerroGate — operator CLI (ferrogate): inventory, status, revocation, epoch bump"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "ferrogate"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferro-proto     = { path = "../ferro-proto" }
ferro-crypto    = { path = "../ferro-crypto" }
ferro-transport = { path = "../ferro-transport" }

tokio          = { workspace = true }
tonic          = { workspace = true }
anyhow         = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
ferro-crypto = { path = "../ferro-crypto" }
cmis         = { path = "../cmis" }
ferro-attest = { path = "../ferro-attest" }
ferro-audit  = { path = "../ferro-audit" }
ferro-svid   = { path = "../ferro-svid" }

rustls-pki-types = { workspace = true }
tokio            = { workspace = true, features = ["process"] }
tokio-stream     = { workspace = true }
rcgen            = { workspace = true }
