[package]
name        = "mia"
description = "FerroGate — Machine Identity Agent (host daemon)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
name = "mia"
path = "src/lib.rs"

[[bin]]
name = "mia"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferro-crypto = { path = "../ferro-crypto" }
ferro-attest = { path = "../ferro-attest" }
ferro-audit  = { path = "../ferro-audit" }
ferro-proto  = { path = "../ferro-proto" }
ferro-svid   = { path = "../ferro-svid" }

tokio              = { workspace = true }
tokio-stream       = { workspace = true }
tonic              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
rand_core          = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
ciborium           = { workspace = true }
base64             = { workspace = true }

[dev-dependencies]
cmis              = { path = "../cmis" }
ferro-raft        = { path = "../ferro-raft" }
ferro-svid        = { path = "../ferro-svid" }
ferro-svid-verify = { path = "../ferro-svid-verify" }
ferro-attest      = { path = "../ferro-attest" }
ferro-crypto      = { path = "../ferro-crypto" }
tokio-stream      = { workspace = true }
futures           = { workspace = true }
tonic             = { workspace = true }
rcgen             = { workspace = true }
p256              = { workspace = true }
sha2              = { workspace = true }
rand_core         = { workspace = true }
serde_json        = { workspace = true }
base64            = { workspace = true }

# The TPM 2.0 ESAPI stack only builds where a TSS2 implementation exists
# (Linux `/dev/tpmrm0`, Windows TBS). On other hosts `mia::tpm` compiles out.
[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = { workspace = true }
ring      = { workspace = true }

# The Windows named-pipe helper transport delegates all FFI (client PID, image
# attestation, ACL) to `ferro-winauth`, keeping `mia` itself `forbid(unsafe)`.
[target.'cfg(windows)'.dependencies]
ferro-winauth = { path = "../ferro-winauth" }

[target.'cfg(target_os = "linux")'.dev-dependencies]
hex          = { workspace = true }
sha2         = { workspace = true }
rcgen        = { workspace = true }
tss-esapi    = { workspace = true }
ferro-attest = { path = "../ferro-attest" }
